--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@ body {
   background-color: blanchedalmond;
 }
 
+.removed {
+  margin: 5px;
+  height: 150px;
+  width: 140px;
+  border: blanchedalmond solid 2px;
+  color: blanchedalmond;
+}
+
 .card {
   border: black solid 2px;
   border-radius: 5px;
